Implements controller test and docker image
